Git_WGBH_QC/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Opportunity.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_Number__c</fullName>
        <label>Committed Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Status__c</fullName>
        <label>Fulfillment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superceded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Membership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gift Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBenefit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBenefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Code__c</fullName>
        <label>Package Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resume_Date__c</fullName>
        <label>Resume Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_Number__c</fullName>
        <label>Sent Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_To_Vendor_Date__c</fullName>
        <label>Sent To Vendor Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>First Class</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>Unique external id for TA/FM</description>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>28</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <validationRules>
        <fullName>Opportunity_Line_Item_Resume_Date</fullName>
        <active>true</active>
        <description>Resume Date will be populated when fulfillment status is set to suspended and the system shall send an email to the operations group a week before resume date to set the status back to ready to process</description>
        <errorConditionFormula>AND(ISPICKVAL(Fulfillment_Status__c,&apos;Suspended&apos;) , ISNULL(Resume_Date__c))</errorConditionFormula>
        <errorMessage>Please enter Resume Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Line_Item_Resume_Date2</fullName>
        <active>true</active>
        <description>Resume Date will be populated when fulfillment status is set to suspended and the system shall send an email to the operations group a week before resume date to set the status back to ready to process</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Fulfillment_Status__c,&apos;Suspended&apos;)) , NOT(ISNULL(Resume_Date__c)))</errorConditionFormula>
        <errorMessage>Can not enter Resume Date if Fulfillment Status is not Suspended.</errorMessage>
    </validationRules>
</CustomObject>